adding global search, clean-up & misc rewiring

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <link rel="/assets/css/Site.css">
   </head>
   <body>
-    <div class="container" style="background-color: transparent;">
+    <div class="container-fluid" style="background-color: transparent;">
       <app-root></app-root>
     </div>
     <div id="dialog" title="Details">
